manifests/idempotency-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: idempotency-service
  namespace: backend
  labels:
    app: idempotency
spec:
  type: ClusterIP
  ports:
    - port: 7000
      name: idempotency
      targetPort: 8000
  selector:
    app: idempotency
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idempotency-deployment
  namespace: backend
  labels:
    app: idempotency
spec:
  selector:
    matchLabels:
      app: idempotency
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: idempotency
    spec:
      containers:
        - image: andrey4281/idempotency-key:0.0.2
          name: idempotency
          ports:
            - containerPort: 8000
          imagePullPolicy: IfNotPresent
